# slop-science

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
slop-eval/: README.md  pyproject.toml
slop-eval/examples/: quickstart.py
slop-eval/src/slop_eval/: __init__.py  config.py  llm.py  metrics.py  prompts.py  vibes.py
slop-eval/src/slop_eval/providers/: google.py
slop-eval/tests/: test_offline.py
slop-frames/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
slop-frames/.github/workflows/: ci.yml
slop-frames/examples/: quickstart.py  sales_data.csv
slop-frames/src/slop_frames/: __init__.py  config.py  frame.py  llm.py  prompts.py  segfault.py  vibes.py
slop-frames/src/slop_frames/providers/: anthropic.py  openai.py
slop-frames/tests/: test_offline.py  test_providers.py
slop-model/: README.md  pyproject.toml
slop-model/examples/: quickstart.py
slop-model/src/slop_model/: __init__.py  config.py  llm.py  model.py  prompts.py  vibes.py
slop-model/tests/: test_offline.py
slop-plot/: README.md  pyproject.toml
slop-plot/examples/: quickstart.py
slop-plot/src/slop_plot/: __init__.py  config.py  llm.py  prompts.py  pyplot.py  vibes.py
slop-plot/src/slop_plot/providers/: anthropic.py  google.py  ollama.py  openai.py
slop-plot/tests/: test_offline.py
slop-report/: README.md  pyproject.toml
slop-report/examples/: quickstart.py
slop-report/src/slop_report/: __init__.py  config.py  llm.py  prompts.py  report.py  vibes.py
slop-report/src/slop_report/providers/: base.py  ollama.py
slop-report/tests/: test_offline.py
slop-sql/: README.md  pyproject.toml
slop-sql/examples/: quickstart.py
slop-sql/src/slop_sql/: __init__.py  config.py  connection.py  llm.py  prompts.py  vibes.py
slop-sql/tests/: test_offline.py
slop-stat/: README.md  pyproject.toml
slop-stat/examples/: quickstart.py
slop-stat/src/slop_stat/: __init__.py  config.py  llm.py  prompts.py  stats.py  vibes.py
slop-stat/src/slop_stat/providers/: __init__.py
slop-stat/tests/: test_offline.py
slop-torch/: README.md  pyproject.toml
slop-torch/examples/: quickstart.py
slop-torch/src/slop_torch/: __init__.py  config.py  llm.py  nn.py  prompts.py  vibes.py
slop-torch/src/slop_torch/providers/: anthropic.py  base.py  google.py  ollama.py  openai.py
slop-torch/tests/: test_offline.py
