[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slop-frames"
version = "0.1.0"
description = "A schema-free, inference-backed DataFrame computation layer with pluggable model backends."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SlopStack Labs" }]
keywords = ["dataframe", "llm", "inference", "semantic-computation", "data-engineering", "schema-free", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=1.5",
]

[project.optional-dependencies]
# Anthropic backend (default) — official SDK. OpenAI, Gemini, and Ollama
# backends use the standard library and need no extra dependency.
anthropic = ["anthropic>=0.40"]
live = ["anthropic>=0.40"]
dev = ["pytest>=7", "anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/slopstack-labs/slop-frames"
Repository = "https://github.com/slopstack-labs/slop-frames"
Issues = "https://github.com/slopstack-labs/slop-frames/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slop_frames"]

[tool.pytest.ini_options]
testpaths = ["tests"]
