[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slop-plot"
version = "0.1.0"
description = "Tokenmaxxed data visualization. Why render pixels when you can stream vibes?"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SlopStack Labs" }]
keywords = ["visualization", "llm", "poetry", "anti-matplotlib", "tokenmaxxed", "data-science", "vibes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []

[project.optional-dependencies]
# Anthropic backend (default) — official SDK. OpenAI, Gemini, and Ollama
# backends use the standard library and need no extra dependency.
anthropic = ["anthropic>=0.40"]
live = ["anthropic>=0.40"]
dev = ["pytest>=7", "anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/slopstack-labs/slop-science"
Repository = "https://github.com/slopstack-labs/slop-science"
Issues = "https://github.com/slopstack-labs/slop-science/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slop_plot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
